test/tests/errors/error-record-non-storeable2.sm
// true
// false
// false
/**/
/**/

program {
    const x: record(a: proc()) = record(a: proc());
}